<resources>
    <string name="app_name">DynaMatter</string>
    <string name="main_home">main</string>
    <string name="get_more">More</string>
    <string name="release_to_refresh">Release to refresh</string>
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="refreshing">Refreshing...</string>
    <string name="updating">Updating：</string>
    
    <string name="prompt_email">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>

    <string name="action_sign_in_register"><b>登录</b> 或注册</string>
    <string name="action_sign_in_short">登录</string>

    <string name="action_forgot_password">Recover lost password</string>

    <string name="login_progress_signing_in">登录中&#8230;</string>

    <string name="error_invalid_email">用户名格式不对</string>
    <string name="error_invalid_password">密码长度不对</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">此项必须</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in">登录</string>
</resources>
