<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="250dp"
    tools:context=".LoginActivity" >

    <!-- Login progress -->
    <LinearLayout android:id="@+id/login_status"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ProgressBar style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/login_status_message"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/login_progress_signing_in" />
    </LinearLayout>

    <!-- Login form -->
    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:background="@drawable/login"
            >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:baselineAligned="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_vertical"
            android:measureWithLargestChild="false"
            android:orientation="vertical"
            android:padding="30dp" >

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified" />

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:orientation="horizontal"
                    android:gravity="center_horizontal">
                <Button android:id="@+id/signin" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_marginTop="16dp"
                        android:text="@string/action_sign_in" android:paddingLeft="32dp"
                        android:paddingRight="32dp" android:layout_gravity="right" android:layout_marginRight="20dp"/>
                <Button android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_register"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:layout_gravity="right" android:layout_marginLeft="20dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</merge>
